# 0.00.08 (44901) Oct 8, 2010
10/8/10 Publishing new version for review by team.
Removed duplicate copy of max/min buttons 
Increased the size of the atom icon on the scale
Integrated the graphics NP provided for the scale and for the charge indicator
Increased the font of "Atom" and "Ion" in the charge indicator
# 0.00.07 (44886) Oct 7, 2010
Aligned the right sides of the readout windows
Made "Unstable" text color black instead of red
# 0.00.06 (44883) Oct 7, 2010
Fixed: Window readouts do not re-maximize on reset all
Added a circular gradient paint to the charge indicator meter background
Added a check mark for "Ion" text in the charge indicator, and made it red for positive and blue for negative
Moved the element name from the periodic table to above the nucleus
Made all non-selected elements in the periodic table the same color, instead of indicating the "buildable elements" in blue 
Added a red/gray nucleus dot in the mass indicator atom icon
Increased the size of the atom icon on the mass-indicator scale
Aligned readout windows
Made the electron orbitals more transparent
Capitalized window names
Improved font for window names
Moved the window name and button to the right, and content to the left
Improved the fonts for the Atom and Ion labels
# 0.00.05 (44820) Oct 6, 2010
10/6/10 Added indicators and readouts
# 0.00.04 (44793) Oct 6, 2010
10/6/10 Publishing to dev with changes based on first round of feedback.
# 0.00.03 (44790) Oct 6, 2010
10/6/10 Publishing to dev after incorporating first round of feedback.
10/6/10 Adjusted buckets and electron position so that electrons in the bottom row are easier to grab.
10/6/10 Added two neutrons and one electron.  This now matches the original spec.
# 0.00.02 (44765) Oct 6, 2010
10/6/10 First version with basic atom-building functionality.
# 0.00.01 (44266) Sep 21, 2010
9/21/10 Initial deployment of this sim, no actual functionality yet.
09-21-2010 Original creation of this simulation project.